back - refactor: Refatoração no Controller e Service de Livro